<resources>
    <string name="app_name">photobook</string>
    <string name="add_post_description">Click on this button to add a new post or login if you\'re not</string>
    <string name="retryImageDescription">Click here to reload data from server</string>
    <string name="post_not_found_message">An exception occurred, the post has not been found. Please try again later</string>
    <string name="up_vote_not_saved_message">An exception occurred while upvoting, please check your internet connexion and try again</string>
    <string name="posted_image_description">Posted image, please click on it to see in a wide screen</string>
    <string name="number_of_comments">Number of comments</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_a_comment">Add a comment</string>
    <string name="comment_the_post_button_description">click here to comment the post</string>
    <string name="post_comment">Post comment</string>
    <string name="comment_saving_error">An exception occurred while saving your comment, check your internet and try again</string>
    <string name="comment_saving_success">Comment saved successfully</string>
    <string name="comment_empty_message">Comment empty, please write something before posting</string>
    <string name="user_not_logged_in_description">You are not logged in, please login first</string>
    <string name="answer">Answer</string>
    <string name="comment_hint">What do you want to say ?</string>
    <string name="delete_image_button_description">click here to delete this picture</string>
    <string name="title">Title</string>
    <string name="take_a_picture_description">Click here if you want to take a real time picture for your post</string>
    <string name="body_description">What do you want to talk about ?</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="take_a_video">Record a video</string>
    <string name="take_a_video_description">Click here if you want to record a video for your post</string>
    <string name="newly_added_image_description">Newly added image. Click on the cross to delete it if you want</string>
    <string name="save_post_button_description">Click here to save your post.</string>
    <string name="save_post">Save post</string>
    <string name="post_saving_success">Your post has been uploaded successfully</string>
    <string name="post_saving_error">An exception occurred while saving your post, check your internet connexion and try again</string>
    <string name="successfully_saved_image_message">photo saved on cloud but you can keep taking other</string>
    <string name="unsuccessfully_saved_image_message">Your latest taken image has not been successfully saved, please you may consider taking it again</string>
    <string name="unsuccessfully_saved_video_message">Your latest recorded video has not been successfully saved, please you may consider recording it again</string>
    <string name="take_image_and_video_explanation">If you want to share a video, please delete previously taken images</string>
    <string name="take_video_and_image_explanation">If you want to share a video, please delete previously taken images</string>
    <string name="successfully_saved_video_message">video saved on cloud but you can keep taking other</string>
    <string name="save_post_error_message">Please add a media or at least write a something to be able to post</string>
    <string name="camera_permission_denied_explanation">"You must enable camera permission to be able to use this functionality "</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="login">Login</string>
    <string name="welcome_to_the_photo_book_app">Welcome to the Photo Book app</string>
    <string name="do_you_want_to_leave">Do you want discard your post and leave ?</string>
    <string name="cancel_post">Cancel post</string>
    <string name="discard_post">Discard post</string>
    <string name="discard">Discard</string>
    <string name="cancel">Cancel</string>
    <string name="unable_to_get_your_camera">\"Unable to get your camera: \"</string>
    <string name="no_more_than_five_images">You\'re allowed to take only 5 images per post. Please feel free to create another post if you wish</string>
</resources>